@@ -1,5 +1,5 @@
 5.1
-	+ Set version to 5.1
+	+ Auto-mark gateway as default when adding the only one
 5.0.10
 	+ Fix failover-checker script
 	+ Make DHCP hooks less error-prone and remove warnings
