@@ -1,4 +1,6 @@
 5.1
+	+ Pass action to HTMLSetter templates so they can have a different
+	  behavior for add and edit
 	+ Avoid errors when license file not exist in webadmin restart
 	+ Services stop working and activation is required after trial expired
 	+ Allow up to 12 dashboard widgets per section instead of 4
